apps/home-assistant/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant
  namespace: server
  labels:
    app.kubernetes.io/name: home-assistant
    app.kubernetes.io/component: ingress
    app.kubernetes.io/part-of: server
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`home.d-f.dev`)"
      kind: Rule
      services:
        - name: home-assistant
          port: 8123
      middlewares:
        - name: crowdsec
          namespace: server
  tls:
    certResolver: letsencrypt
